@@ -1,32 +1,51 @@
 /*
-* MegaMek -
-* Copyright (C) 2016 The MegaMek Team
-*
-* This program is free software; you can redistribute it and/or modify it under
-* the terms of the GNU General Public License as published by the Free Software
-* Foundation; either version 2 of the License, or (at your option) any later
-* version.
-*
-* This program is distributed in the hope that it will be useful, but WITHOUT
-* ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
-* FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
-* details.
-*/
+ * Copyright (C) 2016-2025 The MegaMek Team. All Rights Reserved.
+ *
+ * This file is part of MegaMek.
+ *
+ * MegaMek is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License (GPL),
+ * version 3 or (at your option) any later version,
+ * as published by the Free Software Foundation.
+ *
+ * MegaMek is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty
+ * of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ * See the GNU General Public License for more details.
+ *
+ * A copy of the GPL should have been included with this project;
+ * if not, see <https://www.gnu.org/licenses/>.
+ *
+ * NOTICE: The MegaMek organization is a non-profit group of volunteers
+ * creating free software for the BattleTech community.
+ *
+ * MechWarrior, BattleMech, `Mech and AeroTech are registered trademarks
+ * of The Topps Company, Inc. All Rights Reserved.
+ *
+ * Catalyst Game Labs and the Catalyst Game Labs logo are trademarks of
+ * InMediaRes Productions, LLC.
+ *
+ * MechWarrior Copyright Microsoft Corporation. MegaMek was created under
+ * Microsoft's "Game Content Usage Rules"
+ * <https://www.xbox.com/en-US/developers/rules> and it is not endorsed by or
+ * affiliated with Microsoft.
+ */
 package megamek.client.ratgenerator;
 
 import java.util.*;
 import java.util.stream.Collectors;
 
 import megamek.client.ratgenerator.Ruleset.ProgressListener;
-import megamek.common.Compute;
-import megamek.common.Entity;
-import megamek.common.EntityMovementMode;
-import megamek.common.EntityWeightClass;
-import megamek.common.MekFileParser;
-import megamek.common.MekSummary;
-import megamek.common.MekSummaryCache;
-import megamek.common.UnitType;
+import megamek.common.annotations.Nullable;
+import megamek.common.compute.Compute;
 import megamek.common.loaders.EntityLoadingException;
+import megamek.common.loaders.MekFileParser;
+import megamek.common.loaders.MekSummary;
+import megamek.common.loaders.MekSummaryCache;
+import megamek.common.units.Entity;
+import megamek.common.units.EntityMovementMode;
+import megamek.common.units.EntityWeightClass;
+import megamek.common.units.UnitType;
 import megamek.logging.MMLogger;
 
 /**
@@ -35,7 +54,7 @@ import megamek.logging.MMLogger;
  * @author Neoancient
  */
 public class ForceDescriptor {
-    private final static MMLogger logger = MMLogger.create(ForceDescriptor.class);
+    private final static MMLogger LOGGER = MMLogger.create(ForceDescriptor.class);
 
     public static final int REINFORCED = 1;
     public static final int UNDERSTRENGTH = -1;
@@ -52,61 +71,47 @@ public class ForceDescriptor {
     public static final int RATING_4 = 4;
     public static final int RATING_5 = 5;
 
-    public static final String[] ORDINALS = {
-            "First", "Second", "Third", "Fourth", "Fifth",
-            "Sixth", "Seventh", "Eighth", "Ninth", "Tenth"
-    };
+    public static final String[] ORDINALS = { "First", "Second", "Third", "Fourth", "Fifth", "Sixth", "Seventh",
+                                              "Eighth", "Ninth", "Tenth" };
 
-    public static final String[] PHONETIC = {
-            "Alpha", "Bravo", "Charlie", "Delta", "Echo",
-            "Foxtrot", "Golf", "Hotel", "India", "Juliett",
-            "Kilo", "Lima", "Mike", "November", "Oscar",
-            "Papa", "Quebec", "Romeo", "Sierra", "Tango",
-            "Uniform", "Victor", "Whiskey", "X-ray", "Yankee",
-            "Zulu"
-    };
+    public static final String[] PHONETIC = { "Alpha", "Bravo", "Charlie", "Delta", "Echo", "Foxtrot", "Golf", "Hotel",
+                                              "India", "Juliett", "Kilo", "Lima", "Mike", "November", "Oscar", "Papa",
+                                              "Quebec", "Romeo", "Sierra", "Tango", "Uniform", "Victor", "Whiskey",
+                                              "X-ray", "Yankee", "Zulu" };
 
-    public static final String[] GREEK = {
-            "Alpha", "Beta", "Gamma", "Delta", "Epsilon",
-            "Zeta", "Eta", "Theta", "Iota", "Kappa",
-            "Lambda", "Mu", "Nu", "Xi", "Omicron", "Pi",
-            "Rho", "Sigma", "Tau", "Upsilon", "Phi",
-            "Chi", "Psi", "Omega"
-    };
+    public static final String[] GREEK = { "Alpha", "Beta", "Gamma", "Delta", "Epsilon", "Zeta", "Eta", "Theta", "Iota",
+                                           "Kappa", "Lambda", "Mu", "Nu", "Xi", "Omicron", "Pi", "Rho", "Sigma", "Tau",
+                                           "Upsilon", "Phi", "Chi", "Psi", "Omega" };
 
-    public static final String[] LATIN = {
-            "Prima", "Secunda", "Tertia", "Quarta", "Quinta",
-            "Sexta", "Septima", "Octava", "Nona", "Decima"
-    };
+    public static final String[] LATIN = { "Prima", "Secunda", "Tertia", "Quarta", "Quinta", "Sexta", "Septima",
+                                           "Octava", "Nona", "Decima" };
 
-    public static final String[] ROMAN = {
-            "I", "II", "III", "IV", "V", "VI", "VII", "VIII", "IX", "X",
-            "XI", "XII", "XIII", "XIV", "XV", "XVI", "XVII", "XVIII", "XIX", "XX"
-    };
+    public static final String[] ROMAN = { "I", "II", "III", "IV", "V", "VI", "VII", "VIII", "IX", "X", "XI", "XII",
+                                           "XIII", "XIV", "XV", "XVI", "XVII", "XVIII", "XIX", "XX" };
 
     private int index;
     private String name;
     private String faction;
     private Integer year;
-    private Integer eschelon;
+    private Integer echelon;
     private int sizeMod;
     private boolean augmented;
     private Integer weightClass;
     private Integer unitType;
-    private HashSet<EntityMovementMode> movementModes;
-    private HashSet<MissionRole> roles;
+    private final HashSet<EntityMovementMode> movementModes;
+    private final HashSet<MissionRole> roles;
     private String rating;
     private Integer experience;
     private Integer rankSystem;
     private Integer coRank;
-    private HashSet<String> models;
-    private HashSet<String> chassis;
-    private HashSet<String> variants;
+    private final HashSet<String> models;
+    private final HashSet<String> chassis;
+    private final HashSet<String> variants;
     private CrewDescriptor co;
     private CrewDescriptor xo;
     private String camo;
 
-    private HashSet<String> flags;
+    private final HashSet<String> flags;
 
     private FormationType formationType;
     private String generationRule;
@@ -120,7 +125,7 @@ public class ForceDescriptor {
 
     private boolean generateAttachments;
     private ForceDescriptor parent;
-    private ArrayList<ForceDescriptor> subforces;
+    private ArrayList<ForceDescriptor> subForces;
     private ArrayList<ForceDescriptor> attached;
     private double dropshipPct = 0.0;
     private double jumpshipPct = 0.0;
@@ -137,7 +142,7 @@ public class ForceDescriptor {
         chassis = new HashSet<>();
         variants = new HashSet<>();
         parent = null;
-        subforces = new ArrayList<>();
+        subForces = new ArrayList<>();
         attached = new ArrayList<>();
         flags = new HashSet<>();
         topLevel = false;
@@ -148,46 +153,35 @@ public class ForceDescriptor {
     }
 
     /**
-     * Checks whether the chassis matches the unit type for this node of the force
-     * tree.
-     * If a list of acceptable chassis has been assigned, checks whether the chassis
-     * is in the list.
-     * unit type.
+     * Checks whether the chassis matches the unit type for this node of the force tree. If a list of acceptable chassis
+     * has been assigned, checks whether the chassis is in the list. unit type.
      *
      * @param cRec A unit chassis record
-     * @return Whether the chassis is of the correct unit type and is on the list of
-     *         acceptable
-     *         chassis if it exists.
      *
+     * @return Whether the chassis is of the correct unit type and is on the list of acceptable chassis if it exists.
      */
     public boolean matches(ChassisRecord cRec) {
         if (cRec.getUnitType() != unitType) {
             return false;
-        } else if (!chassis.isEmpty() && !chassis.contains(cRec.getChassis())) {
-            return false;
         } else {
-            return true;
+            return chassis.isEmpty() || chassis.contains(cRec.getChassis());
         }
     }
 
     /**
-     * If a list of acceptable chassis, models, or variants has been assigned,
-     * checks whether
-     * the model is among them.
+     * If a list of acceptable chassis, models, or variants has been assigned, checks whether the model is among them.
      *
      * @param mRec A unit model record
-     * @return Whether the model is on the list of acceptable chassis, variants, or
-     *         models.
+     *
+     * @return Whether the model is on the list of acceptable chassis, variants, or models.
      */
     public boolean matches(ModelRecord mRec) {
         if (!chassis.isEmpty() && !chassis.contains(mRec.getChassis())) {
             return false;
         } else if (!variants.isEmpty() && !variants.contains(mRec.getModel())) {
             return false;
-        } else if (!models.isEmpty() && !models.contains(mRec.getKey())) {
-            return false;
         } else {
-            return true;
+            return models.isEmpty() || models.contains(mRec.getKey());
         }
     }
 
@@ -203,7 +197,7 @@ public class ForceDescriptor {
         }
         // First see if a formation has been assigned. If unable to fulfill the
         // formation requirements, generate using default parameters.
-        if (subforces.isEmpty()) {
+        if (subForces.isEmpty()) {
             ModelRecord mr = generate();
             if (null == mr && !models.isEmpty()) {
                 mr = RATGenerator.getInstance().getModelRecord(getModelName());
@@ -211,7 +205,7 @@ public class ForceDescriptor {
             if (null != mr) {
                 setUnit(mr);
             } else {
-                logger.error("Could not generate unit");
+                LOGGER.error("Could not generate unit");
             }
         } else {
             if (null != formationType) {
@@ -219,22 +213,25 @@ public class ForceDescriptor {
                 if (null != generationRule) {
                     // In cases like Novas and air lances the formation rules only apply to some of
                     // the units
-                    if (!generateAndAssignFormation(subforces, generationRule.equals("chassis"), 0)) {
-                        generateLance(subforces);
+                    if (!generateAndAssignFormation(subForces, generationRule.equals("chassis"), 0)) {
+                        generateLance(subForces);
                         formationType = null;
                     }
                 } else {
-                    // If group generation is not set, then either this is a compound formation
-                    // (e.g. squadron,
-                    // aero/vehicle Point) or we are generating uniform subforces such as companies
-                    // in SL line units
+                    // If group generation is not set, then either this is a compound formation (e.g. squadron,
+                    // aero/vehicle Point) or we are generating uniform sub forces such as companies in SL line units
                     try {
-                        Map<String, List<ForceDescriptor>> byGenRule = subforces.stream()
-                                .collect(Collectors.groupingBy(ForceDescriptor::getGenerationRule));
+                        Map<String, List<ForceDescriptor>> byGenRule = subForces.stream()
+                              .collect(Collectors.groupingBy(
+                                    ForceDescriptor::getGenerationRule));
                         if (byGenRule.containsKey("group")) {
-                            if (!generateAndAssignFormation(byGenRule.get("group").stream()
-                                    .map(ForceDescriptor::getSubforces).flatMap(Collection::stream)
-                                    .collect(Collectors.toList()), false, byGenRule.get("group").size())) {
+                            if (!generateAndAssignFormation(byGenRule.get("group")
+                                        .stream()
+                                        .map(ForceDescriptor::getSubForces)
+                                        .flatMap(Collection::stream)
+                                        .collect(Collectors.toList()),
+                                  false,
+                                  byGenRule.get("group").size())) {
                                 formationType = null;
                             }
                         } else if (byGenRule.containsKey("model")) {
@@ -243,7 +240,7 @@ public class ForceDescriptor {
                             generateAndAssignFormation(byGenRule.get("chassis"), true, 0);
                         }
                     } catch (NullPointerException ex) {
-                        logger.error(ex, "Found null generation rule in force node with formation set.");
+                        LOGGER.error(ex, "Found null generation rule in force node with formation set.");
                     }
                 }
             } else {
@@ -260,14 +257,14 @@ public class ForceDescriptor {
                             }
                             break;
                         case "group":
-                            generateLance(subforces);
+                            generateLance(subForces);
                             break;
                     }
                 }
             }
         }
-        int count = subforces.size() + attached.size();
-        subforces.forEach(fd -> fd.generateUnits(l, progress / count));
+        int count = subForces.size() + attached.size();
+        subForces.forEach(fd -> fd.generateUnits(l, progress / count));
         attached.forEach(fd -> fd.generateUnits(l, progress / count));
         if (count == 0 && null != l) {
             l.updateProgress(progress, "Populating force tree");
@@ -275,40 +272,37 @@ public class ForceDescriptor {
     }
 
     /**
-     * Sorts out all subforce nodes eligible for the <code>FormationType</code> and
-     * attempts to generate
-     * a formation based on their parameters. If the formation is successfully
-     * generated, it is distributed
-     * to the subforces in the order provided. For leaf node, the unit is set. For
-     * non-final nodes,
-     * the unit is added to either the model or chassis list depending on the
-     * provided grouping rule.
-     * Any subforces that are not eligible for the formation are then generated.
+     * Sorts out all sub force nodes eligible for the <code>FormationType</code> and attempts to generate a formation
+     * based on their parameters. If the formation is successfully generated, it is distributed to the sub forces in the
+     * order provided. For leaf node, the unit is set. For non-final nodes, the unit is added to either the model or
+     * chassis list depending on the provided grouping rule. Any sub forces that are not eligible for the formation are
+     * then generated.
      *
-     * @param subs      The subforces to generate unit for. These need not be direct
-     *                  children of
+     * @param subs      The sub forces to generate unit for. These need not be direct children of
      *                  <code>this</code>.
-     * @param chassis   If true, any non-final subforce node will have the generated
-     *                  unit added to the
-     *                  chassis list instead of the model list.
-     * @param numGroups The number of groups to pass on to formation generation;
-     *                  used to override
-     *                  standard grouping constraints (e.g. matched pairs in fighter
-     *                  squadrons).
+     * @param chassis   If true, any non-final sub force node will have the generated unit added to the chassis list
+     *                  instead of the model list.
+     * @param numGroups The number of groups to pass on to formation generation; used to override standard grouping
+     *                  constraints (e.g. matched pairs in fighter squadrons).
+     *
      * @return Whether the formation was successfully generated.
      */
     private boolean generateAndAssignFormation(List<ForceDescriptor> subs, boolean chassis, int numGroups) {
         Map<Boolean, List<ForceDescriptor>> eligibleSubs = subs.stream()
-                .collect(Collectors.groupingBy(fd -> null != fd.getUnitType()
-                        && (formationType.isAllowedUnitType(fd.getUnitType()))
-                        || (augmented
-                                && (fd.getUnitType() == UnitType.BATTLE_ARMOR)
-                                || fd.getUnitType() == UnitType.INFANTRY)));
+              .collect(Collectors.groupingBy(fd -> null !=
+                    fd.getUnitType() &&
+                    (formationType.isAllowedUnitType(
+                          fd.getUnitType())) ||
+                    (augmented &&
+                          (fd.getUnitType() ==
+                                UnitType.BATTLE_ARMOR) ||
+                          fd.getUnitType() ==
+                                UnitType.INFANTRY)));
         if (eligibleSubs.containsKey(true)) {
             if (eligibleSubs.get(true).isEmpty()) {
                 return false;
             } else {
-                List<ModelRecord> list = null;
+                List<ModelRecord> list;
                 if (augmented) {
                     list = generateNovaFormation(eligibleSubs.get(true), ModelRecord.NETWORK_NONE, numGroups);
                 } else {
@@ -320,12 +314,12 @@ public class ForceDescriptor {
                     for (int i = 0; i < list.size(); i++) {
                         // The formation requirements do not apply to the infantry part of a nova, and
                         // those units have already been generated by generateNovaFormation.
-                        if (augmented
-                                && (eligibleSubs.get(true).get(i).getUnitType() == UnitType.BATTLE_ARMOR
-                                        || eligibleSubs.get(true).get(i).getUnitType() == UnitType.INFANTRY)) {
+                        if (augmented &&
+                              (eligibleSubs.get(true).get(i).getUnitType() == UnitType.BATTLE_ARMOR ||
+                                    eligibleSubs.get(true).get(i).getUnitType() == UnitType.INFANTRY)) {
                             continue;
                         }
-                        if (eligibleSubs.get(true).get(i).getSubforces().isEmpty()) {
+                        if (eligibleSubs.get(true).get(i).getSubForces().isEmpty()) {
                             eligibleSubs.get(true).get(i).setUnit(list.get(i));
                         } else if (chassis) {
                             eligibleSubs.get(true).get(i).getChassis().add(list.get(i).getChassis());
@@ -343,32 +337,34 @@ public class ForceDescriptor {
     }
 
     /**
-     * Translates <code>ForceDescriptor</code> list into parameters to pass to the
-     * formation builder.
+     * Translates <code>ForceDescriptor</code> list into parameters to pass to the formation builder.
      *
      * @param subs        A list of <ForceDescriptor</code> nodes.
-     * @param networkMask The type of C3 network that should be used in generating
-     *                    the formation.
-     * @param numGroups   Overrides the default value for formation grouping
-     *                    constraints (e.g. some
-     *                    Capellan squadrons have two groups of three instead of the
-     *                    standard three groups
-     *                    of two).
-     * @return The list of units that make up the formation, or an empty list if a
-     *         formation
-     *         could not be generated with the given parameters.
+     * @param networkMask The type of C3 network that should be used in generating the formation.
+     * @param numGroups   Overrides the default value for formation grouping constraints (e.g. some Capellan squadrons
+     *                    have two groups of three instead of the standard three groups of two).
+     *
+     * @return The list of units that make up the formation, or an empty list if a formation could not be generated with
+     *       the given parameters.
      */
     private List<ModelRecord> generateFormation(List<ForceDescriptor> subs, int networkMask, int numGroups) {
-        Map<UnitTable.Parameters, Integer> paramCount = new HashMap<>();
+        Map<Parameters, Integer> paramCount = new HashMap<>();
         for (ForceDescriptor sub : subs) {
-            paramCount.merge(new UnitTable.Parameters(sub.getFactionRec(),
-                    sub.getUnitType(), sub.getYear(), sub.ratGeneratorRating(), null, networkMask,
-                    sub.getMovementModes(), sub.getRoles(), 0, sub.getFactionRec()), 1, Integer::sum);
+            paramCount.merge(new Parameters(sub.getFactionRec(),
+                  sub.getUnitType(),
+                  sub.getYear(),
+                  sub.ratGeneratorRating(),
+                  null,
+                  networkMask,
+                  sub.getMovementModes(),
+                  sub.getRoles(),
+                  0,
+                  sub.getFactionRec()), 1, Integer::sum);
         }
 
-        List<UnitTable.Parameters> params = new ArrayList<>();
+        List<Parameters> params = new ArrayList<>();
         List<Integer> numUnits = new ArrayList<>();
-        for (Map.Entry<UnitTable.Parameters, Integer> e : paramCount.entrySet()) {
+        for (Map.Entry<Parameters, Integer> e : paramCount.entrySet()) {
             params.add(e.getKey());
             numUnits.add(e.getValue());
         }
@@ -424,8 +420,12 @@ public class ForceDescriptor {
                 }
             }
             if (networkMask != ModelRecord.NETWORK_NONE) {
-                List<MekSummary> netList = formationType.generateFormation(params, numUnits, networkMask, false, 0,
-                        numGroups);
+                List<MekSummary> netList = formationType.generateFormation(params,
+                      numUnits,
+                      networkMask,
+                      false,
+                      0,
+                      numGroups);
                 // Attempt to create the type of network indicated. If no unit can be created
                 // that fits the
                 // criteria, fall back on the unit that was originally generated.
@@ -441,37 +441,28 @@ public class ForceDescriptor {
                 }
             }
         }
-        return unitList.stream().map(ms -> RATGenerator.getInstance().getModelRecord(ms.getName()))
-                .collect(Collectors.toList());
+        return unitList.stream()
+              .map(ms -> RATGenerator.getInstance().getModelRecord(ms.getName()))
+              .collect(Collectors.toList());
     }
 
     /**
-     * The Nova formation is a composite of base type and battle armor. The
-     * formationType only applies to the
-     * base unit type (Mek, vehicle, fighter). The BA must be eligible for
-     * mechanized and have at least
-     * one omni among the base units per BA squad/point, excepting any BA with
-     * magnetic clamps.
-     *
-     * Though the rules in Campaign Operations only cover BA novas, the Hell's
-     * Horses vehicle/conventional infantry
-     * nova formations require an adapted version of the Nova formation rules to
-     * work.
-     *
-     * This method generates and assigns infantry elements and returns the list of
-     * base elements.
+     * The Nova formation is a composite of base type and battle armor. The formationType only applies to the base unit
+     * type (Mek, vehicle, fighter). The BA must be eligible for mechanized and have at least one omni among the base
+     * units per BA squad/point, excepting any BA with magnetic clamps.
+     * <p>
+     * Though the rules in Campaign Operations only cover BA novas, the Hell's Horses vehicle/conventional infantry nova
+     * formations require an adapted version of the Nova formation rules to work.
+     * <p>
+     * This method generates and assigns infantry elements and returns the list of base elements.
      *
      * @param subs        A list of <ForceDescriptor</code> nodes.
-     * @param networkMask The type of C3 network that should be used in generating
-     *                    the formation.
-     * @param numGroups   Overrides the default value for formation grouping
-     *                    constraints (e.g. some
-     *                    Capellan squadrons have two groups of three instead of the
-     *                    standard three groups
-     *                    of two).
-     * @return The list of units that make up the base formation, or an empty list
-     *         if a formation
-     *         could not be generated with the given parameters.
+     * @param networkMask The type of C3 network that should be used in generating the formation.
+     * @param numGroups   Overrides the default value for formation grouping constraints (e.g. some Capellan squadrons
+     *                    have two groups of three instead of the standard three groups of two).
+     *
+     * @return The list of units that make up the base formation, or an empty list if a formation could not be generated
+     *       with the given parameters.
      */
     private List<ModelRecord> generateNovaFormation(List<ForceDescriptor> subs, int networkMask, int numGroups) {
         // Split base and infantry units
@@ -494,16 +485,16 @@ public class ForceDescriptor {
         // will get the infantry support role.
         if (!infSubs.isEmpty()) {
             generateLance(infSubs);
-            int footCount = (int) infSubs.stream().filter(fd -> fd.getMovementModes()
-                    .contains(EntityMovementMode.INF_LEG)).count();
-            for (int i = 0; i < baseSubs.size(); i++) {
-                if (baseSubs.get(i).getUnitType() == UnitType.TANK
-                        || baseSubs.get(i).getUnitType() == UnitType.VTOL) {
+            int footCount = (int) infSubs.stream()
+                  .filter(fd -> fd.getMovementModes().contains(EntityMovementMode.INF_LEG))
+                  .count();
+            for (ForceDescriptor baseSub : baseSubs) {
+                if (baseSub.getUnitType() == UnitType.TANK || baseSub.getUnitType() == UnitType.VTOL) {
                     if (footCount > 0) {
-                        baseSubs.get(i).getRoles().add(MissionRole.APC);
+                        baseSub.getRoles().add(MissionRole.APC);
                         footCount--;
                     } else {
-                        baseSubs.get(i).getRoles().add(MissionRole.INF_SUPPORT);
+                        baseSub.getRoles().add(MissionRole.INF_SUPPORT);
                     }
                 }
             }
@@ -515,15 +506,16 @@ public class ForceDescriptor {
         }
         if (null == baseUnitList) {
             generateLance(baseSubs);
-            baseUnitList = baseSubs.stream().map(ForceDescriptor::getModelName)
-                    .map(m -> RATGenerator.getInstance().getModelRecord(m))
-                    .filter(Objects::nonNull).collect(Collectors.toList());
+            baseUnitList = baseSubs.stream()
+                  .map(ForceDescriptor::getModelName)
+                  .map(m -> RATGenerator.getInstance().getModelRecord(m))
+                  .filter(Objects::nonNull)
+                  .collect(Collectors.toList());
         }
 
-        // Any BA in exceess of the number of omni base units will require mag clamps,
-        // up to the number of base units.
+        // Any BA in excess of the number of omni base units will require mag clamps, up to the number of base units.
         int magReq = Math.min((int) (baSubs.size() - baseUnitList.stream().filter(AbstractUnitRecord::isOmni).count()),
-                baSubs.size());
+              baSubs.size());
         for (int i = 0; i < baSubs.size(); i++) {
             if (i < magReq) {
                 baSubs.get(i).getRoles().add(MissionRole.MAG_CLAMP);
@@ -537,16 +529,12 @@ public class ForceDescriptor {
     }
 
     /**
-     * Generates a lance or other end-level unit (star, level ii) by individual
-     * units rather than
-     * as an entire formation. Some unit cohesion is attempted for certain unit
-     * types, such as building
-     * vehicle lances out of the same model or pairing fighter chassis. The
-     * equipment rating has an
-     * effect on unit cohesion, such that lower rated units are more likely to have
-     * mismatched equipment.
+     * Generates a lance or other end-level unit (star, level ii) by individual units rather than as an entire
+     * formation. Some unit cohesion is attempted for certain unit types, such as building vehicle lances out of the
+     * same model or pairing fighter chassis. The equipment rating has an effect on unit cohesion, such that lower rated
+     * units are more likely to have mismatched equipment.
      *
-     * @param subs The subforces that describe the individual elements of the lance
+     * @param subs The sub forces that describe the individual elements of the lance
      */
     public void generateLance(List<ForceDescriptor> subs) {
         if (subs.isEmpty()) {
@@ -564,9 +552,8 @@ public class ForceDescriptor {
         }
 
         /*
-         * This method can be used to generate pieces of a combined arms
-         * unit, so we need to get the unit type from one of the subforces
-         * rather than the current.
+         * This method can be used to generate pieces of a combined arms unit, so we need to get the unit type from
+         * one of the sub forces rather than the current.
          */
 
         Integer ut = subs.get(0).getUnitType();
@@ -608,15 +595,14 @@ public class ForceDescriptor {
         ModelRecord baseModel = null;
         /* Generate base model using weight class of entire formation */
         if (ut != null) {
-            if (!(ut == UnitType.MEK || (ut == UnitType.AEROSPACEFIGHTER && subs.size() > 3))) {
+            if (!(ut == UnitType.MEK || (ut == UnitType.AEROSPACE_FIGHTER && subs.size() > 3))) {
                 baseModel = subs.get(0).generate();
             }
-            if (ut == UnitType.AEROSPACEFIGHTER || ut == UnitType.CONV_FIGHTER || ut == UnitType.AERO) {
+            if (ut == UnitType.AEROSPACE_FIGHTER || ut == UnitType.CONV_FIGHTER || ut == UnitType.AERO) {
                 target -= 3;
             }
             if (roles.contains(MissionRole.ARTILLERY)) {
-                if (baseModel != null &&
-                        baseModel.getRoles().contains(MissionRole.MISSILE_ARTILLERY)) {
+                if (baseModel != null && baseModel.getRoles().contains(MissionRole.MISSILE_ARTILLERY)) {
                     roles.remove(MissionRole.ARTILLERY);
                     roles.add(MissionRole.MISSILE_ARTILLERY);
                 } else {
@@ -627,7 +613,7 @@ public class ForceDescriptor {
 
         for (ForceDescriptor sub : subs) {
             boolean foundUnit = false;
-            if (baseModel == null || (ut != null && !ut.equals(sub.getUnitType()))) {
+            if (baseModel == null || !ut.equals(sub.getUnitType())) {
                 unit = sub.generate();
                 if (unit != null) {
                     sub.setUnit(unit);
@@ -648,15 +634,15 @@ public class ForceDescriptor {
                         av = RATGenerator.getInstance().findChassisAvailabilityRecord(era, model, faction, getYear());
                         if (av == null) {
                             for (String alt : RATGenerator.getInstance().getFaction(faction).getParentFactions()) {
-                                av = RATGenerator.getInstance().findChassisAvailabilityRecord(era, model, alt,
-                                        getYear());
+                                av = RATGenerator.getInstance()
+                                      .findChassisAvailabilityRecord(era, model, alt, getYear());
                                 if (av != null) {
                                     break;
                                 }
                             }
                         }
-                        if (Compute.d6(2) >= target
-                                - ((av == null) ? 0 : av.adjustForRating(ratingLevel, totalLevels))) {
+                        if (Compute.d6(2) >=
+                              target - ((av == null) ? 0 : av.adjustForRating(ratingLevel, totalLevels))) {
                             sub.getChassis().clear();
                             sub.getChassis().add(model);
                             int oldWt = sub.getWeightClass();
@@ -675,22 +661,25 @@ public class ForceDescriptor {
                         }
                     } else {
                         ModelRecord mRec = RATGenerator.getInstance().getModelRecord(model);
-                        if (mRec != null && weights.contains(mRec.getWeightClass())
-                                && RATGenerator.getInstance().findModelAvailabilityRecord(era, model,
-                                        faction) != null) {
-                            av = RATGenerator.getInstance().findChassisAvailabilityRecord(era, mRec.getChassisKey(),
-                                    faction, getYear());
+                        if (mRec != null &&
+                              weights.contains(mRec.getWeightClass()) &&
+                              RATGenerator.getInstance().findModelAvailabilityRecord(era, model, faction) != null) {
+                            av = RATGenerator.getInstance()
+                                  .findChassisAvailabilityRecord(era, mRec.getChassisKey(), faction, getYear());
                             if (av == null) {
                                 for (String alt : RATGenerator.getInstance().getFaction(faction).getParentFactions()) {
-                                    av = RATGenerator.getInstance().findChassisAvailabilityRecord(era,
-                                            mRec.getChassisKey(), alt, getYear());
+                                    av = RATGenerator.getInstance()
+                                          .findChassisAvailabilityRecord(era,
+                                                mRec.getChassisKey(),
+                                                alt,
+                                                getYear());
                                     if (av != null) {
                                         break;
                                     }
                                 }
                             }
-                            if (Compute.d6(2) >= target
-                                    - ((av == null) ? 0 : av.adjustForRating(ratingLevel, totalLevels))) {
+                            if (Compute.d6(2) >=
+                                  target - ((av == null) ? 0 : av.adjustForRating(ratingLevel, totalLevels))) {
                                 sub.setUnit(mRec);
                                 if (useWeights) {
                                     weights.remove((Object) mRec.getWeightClass());
@@ -702,12 +691,12 @@ public class ForceDescriptor {
                     }
                 }
                 if (!foundUnit && weights.contains(baseModel.getWeightClass())) {
-                    av = RATGenerator.getInstance().findChassisAvailabilityRecord(era, baseModel.getChassisKey(),
-                            faction, getYear());
+                    av = RATGenerator.getInstance()
+                          .findChassisAvailabilityRecord(era, baseModel.getChassisKey(), faction, getYear());
                     if (av == null) {
                         for (String alt : RATGenerator.getInstance().getFaction(faction).getParentFactions()) {
-                            av = RATGenerator.getInstance().findChassisAvailabilityRecord(era,
-                                    baseModel.getChassisKey(), alt, getYear());
+                            av = RATGenerator.getInstance()
+                                  .findChassisAvailabilityRecord(era, baseModel.getChassisKey(), alt, getYear());
                             if (av != null) {
                                 break;
                             }
@@ -767,11 +756,9 @@ public class ForceDescriptor {
     }
 
     /**
-     * Assigns a specific model to this node of the force tree. If this is a leaf
-     * node it will be flagged
-     * as an element. If it has child nodes, they will all be made up of the same
-     * model unless changed by
-     * a rule at a lower level of organization.
+     * Assigns a specific model to this node of the force tree. If this is a leaf node it will be flagged as an element.
+     * If it has child nodes, they will all be made up of the same model unless changed by a rule at a lower level of
+     * organization.
      *
      * @param unit The unit to assign to this node.
      */
@@ -783,16 +770,16 @@ public class ForceDescriptor {
         if (useWeightClass()) {
             weightClass = unit.getWeightClass();
         }
-        if (subforces.isEmpty()) {
+        if (subForces.isEmpty()) {
             element = true;
             movementModes.clear();
             movementModes.add(unit.getMovementMode());
             if (null == unitType) {
                 unitType = unit.getUnitType();
             }
-            if (((unitType == UnitType.MEK) || (unitType == UnitType.AEROSPACEFIGHTER)
-                    || (unitType == UnitType.TANK))
-                    && unit.isOmni()) {
+            if (((unitType == UnitType.MEK) ||
+                  (unitType == UnitType.AEROSPACE_FIGHTER) ||
+                  (unitType == UnitType.TANK)) && unit.isOmni()) {
                 flags.add("omni");
             }
             if (unit.getRoles().contains(MissionRole.ARTILLERY)) {
@@ -828,20 +815,19 @@ public class ForceDescriptor {
          * types,
          * then remaining weight classes.
          */
-        final int[][] altWeights = {
-                { 1, 2, 3, 4, 5 }, // UL
-                { 2, 0, 3, 4, 5 }, // L
-                { 3, 1, 4, 0, 5 }, // M
-                { 2, 4, 1, 5, 0 }, // H
-                { 3, 2, 5, 1, 0 }, // A
-                { 4, 3, 2, 1, 0 } // SH
+        final int[][] altWeights = { { 1, 2, 3, 4, 5 }, // UL
+                                     { 2, 0, 3, 4, 5 }, // L
+                                     { 3, 1, 4, 0, 5 }, // M
+                                     { 2, 4, 1, 5, 0 }, // H
+                                     { 3, 2, 5, 1, 0 }, // A
+                                     { 4, 3, 2, 1, 0 } // SH
         };
         /* Work with a copy */
         ForceDescriptor fd = createChild(index);
-        fd.setEschelon(eschelon);
+        fd.setEchelon(echelon);
         fd.setCoRank(coRank);
         fd.getRoles().clear();
-        fd.getRoles().addAll(roles.stream().filter(r -> r.fitsUnitType(unitType)).collect(Collectors.toList()));
+        fd.getRoles().addAll(roles.stream().filter(r -> r.fitsUnitType(unitType)).toList());
 
         int wtIndex = (useWeightClass() && weightClass != null && weightClass != -1) ? 0 : 4;
 
@@ -852,10 +838,16 @@ public class ForceDescriptor {
                     wcs.add(fd.getWeightClass());
                 }
                 String ratGenRating = ratGeneratorRating();
-                UnitTable table = UnitTable.findTable(fd.getFactionRec(), fd.getUnitType(),
-                        fd.getYear(), ratGenRating, wcs, ModelRecord.NETWORK_NONE,
-                        fd.getMovementModes(), fd.getRoles(), roleStrictness);
-                MekSummary ms = null;
+                UnitTable table = UnitTable.findTable(fd.getFactionRec(),
+                      fd.getUnitType(),
+                      fd.getYear(),
+                      ratGenRating,
+                      wcs,
+                      ModelRecord.NETWORK_NONE,
+                      fd.getMovementModes(),
+                      fd.getRoles(),
+                      roleStrictness);
+                MekSummary ms;
                 if (!fd.getModels().isEmpty()) {
                     ms = table.generateUnit(u -> fd.getModels().contains(u.getName()));
                 } else if (!fd.getChassis().isEmpty()) {
@@ -869,12 +861,14 @@ public class ForceDescriptor {
 
                 if ((!useWeightClass() || wtIndex == 2) && !fd.getRoles().isEmpty()) {
                     fd.getRoles().clear();
-                } else if ((!useWeightClass() || wtIndex == 1)
-                        && !fd.getMovementModes().isEmpty()) {
+                } else if ((!useWeightClass() || wtIndex == 1) && !fd.getMovementModes().isEmpty()) {
                     fd.getMovementModes().clear();
                 } else {
-                    if (useWeightClass() && null != weightClass && weightClass != -1 && weightClass < altWeights.length
-                            && wtIndex < altWeights[weightClass].length) {
+                    if (useWeightClass() &&
+                          null != weightClass &&
+                          weightClass != -1 &&
+                          weightClass < altWeights.length &&
+                          wtIndex < altWeights[weightClass].length) {
                         fd.setWeightClass(altWeights[weightClass][wtIndex]);
                     }
                     wtIndex++;
@@ -882,7 +876,7 @@ public class ForceDescriptor {
             }
         }
 
-        logger.debug("Could not find unit for " + UnitType.getTypeDisplayableName(unitType));
+        LOGGER.debug("Could not find unit for {}", UnitType.getTypeDisplayableName(unitType));
         return null;
     }
 
@@ -897,13 +891,12 @@ public class ForceDescriptor {
                     String forceString = getForceString();
                     entity.setForceString(forceString);
                 } catch (EntityLoadingException ex) {
-                    logger
-                            .error(ex, "Error loading " + ms.getName() + " from file " + ms.getSourceFile().getPath());
+                    LOGGER.error(ex, "Error loading {} from file {}", ms.getName(), ms.getSourceFile().getPath());
                 }
             }
         }
-        int count = subforces.size() + attached.size();
-        subforces.forEach(fd -> fd.loadEntities(l, progress / count));
+        int count = subForces.size() + attached.size();
+        subForces.forEach(fd -> fd.loadEntities(l, progress / count));
         attached.forEach(fd -> fd.loadEntities(l, progress / count));
         if (count == 0 && null != l) {
             l.updateProgress(progress, "Loading entities");
@@ -911,8 +904,7 @@ public class ForceDescriptor {
     }
 
     /**
-     * Generates a force string for exporting these units to MUL / adding to the
-     * game.
+     * Generates a force string for exporting these units to MUL / adding to the game.
      */
     private String getForceString() {
         var ancestors = new ArrayList<ForceDescriptor>();
@@ -933,7 +925,7 @@ public class ForceDescriptor {
     }
 
     public void assignCommanders() {
-        subforces.forEach(ForceDescriptor::assignCommanders);
+        subForces.forEach(ForceDescriptor::assignCommanders);
 
         Ruleset rules = Ruleset.findRuleset(this);
         CommanderNode coNode = null;
@@ -956,17 +948,14 @@ public class ForceDescriptor {
             return;
         }
 
-        if (!subforces.isEmpty()) {
-            int coPos = 0;
-            if (coNode != null) {
-                coPos = (coNode.getPosition() == null) ? 1 : Math.min(coNode.getPosition(), 1);
-            }
+        if (!subForces.isEmpty()) {
+            int coPos = (coNode.getPosition() == null) ? 1 : Math.min(coNode.getPosition(), 1);
             int xoPos = 0;
             if (xoNode != null && (xoNode.getPosition() == null || xoNode.getPosition() > 0)) {
                 xoPos = (xoNode.getPosition() == null) ? coPos + 1 : Math.max(coPos, xoNode.getPosition());
             }
             if (coPos + xoPos > 0) {
-                ForceDescriptor[] forces = subforces.toArray(new ForceDescriptor[0]);
+                ForceDescriptor[] forces = subForces.toArray(new ForceDescriptor[0]);
                 Arrays.sort(forces, forceSorter);
                 if (coPos != 0) {
                     ForceDescriptor coFound = null;
@@ -981,40 +970,17 @@ public class ForceDescriptor {
                         coFound = forces[0];
                     }
                     setCo(coFound.getCo());
-                    subforces.remove(coFound);
-                    subforces.add(0, coFound);
+                    subForces.remove(coFound);
+                    subForces.add(0, coFound);
                 }
                 if (xoPos != 0) {
                     /*
-                     * If the XO is a field officer, the position is assigned to the first subforce
-                     * that doesn't contain the CO
-                     * (which is the first if the CO is not a field officer). If the CO and XO
-                     * positions are the same, the
-                     * XO is assigned to the same subforce as the CO, but the second subforce of
-                     * that one.
+                     * If the XO is a field officer, the position is assigned to the first sub force that doesn't
+                     * contain the CO (which is the first if the CO is not a field officer). If the CO and XO
+                     * positions are the same, the XO is assigned to the same sub force as the CO, but the second sub
+                     * force of that one.
                      */
-                    ForceDescriptor xoFound = null;
-                    ArrayList<ForceDescriptor> subforces = this.subforces;
-                    if (coPos == xoPos) {
-                        subforces = this.subforces.get(0).getSubforces();
-                    }
-                    if (subforces.size() > coPos) {
-                        if (xoNode.getUnitType() != null) {
-                            for (int i = coPos; i < subforces.size(); i++) {
-                                if (subforces.get(i).getUnitType() != null &&
-                                        (xoNode.getUnitType().equals(subforces.get(i).getUnitTypeName())
-                                                || (xoNode.getUnitType().equals("other")
-                                                        && !subforces.get(i).getUnitType()
-                                                                .equals(co.getAssignment().getUnitType())))) {
-                                    xoFound = subforces.get(i);
-                                    break;
-                                }
-                            }
-                        }
-                        if (xoFound == null) {
-                            xoFound = subforces.get(1);
-                        }
-                    }
+                    ForceDescriptor xoFound = getForceDescriptor(coPos, xoPos, xoNode);
 
                     if (xoFound != null) {
                         setXo(xoFound.getCo());
@@ -1037,26 +1003,25 @@ public class ForceDescriptor {
             getXo().setRank(xoNode.getRank());
             getXo().setTitle(xoNode.getTitle());
         }
-        if (!element && !subforces.isEmpty()) {
+        if (!element && !subForces.isEmpty()) {
             movementModes.clear();
             boolean isOmni = true;
             boolean isArtillery = true;
             boolean isMissileArtillery = true;
             boolean isFieldGun = true;
-            for (ForceDescriptor fd : subforces) {
+            for (ForceDescriptor fd : subForces) {
                 movementModes.addAll(fd.getMovementModes());
                 if ((fd.getUnitType() == null ||
-                        !((UnitType.MEK == fd.getUnitType()) || (UnitType.AEROSPACEFIGHTER == fd.getUnitType())
-                                || (UnitType.TANK == fd.getUnitType())))
-                        ||
-                        !fd.getFlags().contains("omni")) {
+                      !((UnitType.MEK == fd.getUnitType()) ||
+                            (UnitType.AEROSPACE_FIGHTER == fd.getUnitType()) ||
+                            (UnitType.TANK == fd.getUnitType()))) || !fd.getFlags().contains("omni")) {
                     isOmni = false;
                 }
                 if (!fd.getRoles().contains(MissionRole.MISSILE_ARTILLERY)) {
                     isMissileArtillery = false;
                 }
-                if (!fd.getRoles().contains(MissionRole.ARTILLERY)
-                        && !fd.getRoles().contains(MissionRole.MISSILE_ARTILLERY)) {
+                if (!fd.getRoles().contains(MissionRole.ARTILLERY) &&
+                      !fd.getRoles().contains(MissionRole.MISSILE_ARTILLERY)) {
                     isArtillery = false;
                 }
                 if (!fd.getRoles().contains(MissionRole.FIELD_GUN)) {
@@ -1078,11 +1043,12 @@ public class ForceDescriptor {
 
             float wt = 0;
             int c = 0;
-            for (ForceDescriptor sub : subforces) {
+            for (ForceDescriptor sub : subForces) {
                 if (sub.useWeightClass()) {
                     if (sub.getWeightClass() == null) {
-                        logger.error("Weight class == null for "
-                                + sub.getUnitType() + " with " + sub.getSubforces().size() + " subforces.");
+                        LOGGER.error("Weight class == null for {} with {} sub-forces",
+                              sub.getUnitType(),
+                              sub.getSubForces().size());
                     } else {
                         wt += sub.getWeightClass();
                         c++;
@@ -1097,26 +1063,53 @@ public class ForceDescriptor {
         attached.forEach(ForceDescriptor::assignCommanders);
     }
 
+    private @Nullable ForceDescriptor getForceDescriptor(int coPos, int xoPos, CommanderNode xoNode) {
+        ForceDescriptor xoFound = null;
+        ArrayList<ForceDescriptor> subForces = this.subForces;
+        if (coPos == xoPos) {
+            subForces = this.subForces.get(0).getSubForces();
+        }
+        if (subForces.size() > coPos) {
+            if (xoNode.getUnitType() != null) {
+                for (int i = coPos; i < subForces.size(); i++) {
+                    if (subForces.get(i).getUnitType() != null &&
+                          (xoNode.getUnitType().equals(subForces.get(i).getUnitTypeName()) ||
+                                (xoNode.getUnitType().equals("other") &&
+                                      !subForces.get(i)
+                                            .getUnitType()
+                                            .equals(co.getAssignment().getUnitType())))) {
+                        xoFound = subForces.get(i);
+                        break;
+                    }
+                }
+            }
+            if (xoFound == null) {
+                xoFound = subForces.get(1);
+            }
+        }
+        return xoFound;
+    }
+
     public void assignPositions() {
         int index = 0;
         HashMap<String, Integer> uniqueCount = new HashMap<>();
-        for (int i = 0; i < subforces.size(); i++) {
-            subforces.get(i).positionIndex = i + 1;
-            if (subforces.get(i).name == null) {
+        for (int i = 0; i < subForces.size(); i++) {
+            subForces.get(i).positionIndex = i + 1;
+            if (subForces.get(i).name == null) {
                 continue;
             }
-            if (subforces.get(i).name.contains(":distinct}")) {
-                if (uniqueCount.containsKey(subforces.get(i).name)) {
-                    uniqueCount.put(subforces.get(i).name, uniqueCount.get(subforces.get(i).name) + 1);
+            if (subForces.get(i).name.contains(":distinct}")) {
+                if (uniqueCount.containsKey(subForces.get(i).name)) {
+                    uniqueCount.put(subForces.get(i).name, uniqueCount.get(subForces.get(i).name) + 1);
                 } else {
-                    uniqueCount.put(subforces.get(i).name, 1);
+                    uniqueCount.put(subForces.get(i).name, 1);
                 }
-            } else if (subforces.get(i).name.matches(".*\\{[^:]*\\}.*")) {
-                subforces.get(i).nameIndex = index++;
+            } else if (subForces.get(i).name.matches(".*\\{[^:]*}.*")) {
+                subForces.get(i).nameIndex = index++;
             }
         }
         HashMap<String, Integer> indexCount = new HashMap<>();
-        for (ForceDescriptor sub : subforces) {
+        for (ForceDescriptor sub : subForces) {
             if (uniqueCount.containsKey(sub.name)) {
                 if (uniqueCount.get(sub.name) > 1) {
                     if (indexCount.containsKey(sub.name)) {
@@ -1135,8 +1128,8 @@ public class ForceDescriptor {
         attached.forEach(ForceDescriptor::assignPositions);
     }
 
-    private Comparator<? super ForceDescriptor> forceSorter = new Comparator<>() {
-        /* Rank by difference in experience + difference in unit/eschelon weights */
+    private final Comparator<? super ForceDescriptor> forceSorter = new Comparator<>() {
+        /* Rank by difference in experience + difference in unit/echelon weights */
         private int rank(ForceDescriptor fd) {
             int retVal = 0;
             if (fd.getWeightClass() != null) {
@@ -1182,9 +1175,8 @@ public class ForceDescriptor {
     };
 
     /**
-     * Calculates transport needs of the unit and generates enough dropships and
-     * jumpships to carry
-     * the indicated portion of the unit.
+     * Calculates transport needs of the unit and generates enough drop-ships and jump ships to carry the indicated
+     * portion of the unit.
      */
     public ForceDescriptor assignTransport() {
         if ((getDropshipPct() <= 0) && (getJumpshipPct() <= 0) && (getCargo() <= 0)) {
@@ -1192,21 +1184,22 @@ public class ForceDescriptor {
         }
         TransportCalculator tp = new TransportCalculator(this);
         List<MekSummary> dropships = tp.calcDropships(getDropshipPct());
-        ForceDescriptor transports = createChild(subforces.size() + attached.size());
+        ForceDescriptor transports = createChild(subForces.size() + attached.size());
         transports.setUnitType(null);
         transports.setName("Transport");
+
         // TODO: put this in the faction files
-        transports.setEschelon(3);
+        transports.setEchelon(3);
         transports.setCoRank(35);
 
         List<MekSummary> shipList = tp.calcJumpShips(getJumpshipPct(), dropships.size());
         shipList.addAll(dropships);
         for (MekSummary ms : shipList) {
-            ForceDescriptor sub = transports.createChild(transports.getSubforces().size());
+            ForceDescriptor sub = transports.createChild(transports.getSubForces().size());
             sub.setUnit(RATGenerator.getInstance().getModelRecord(ms.getName()));
-            sub.setEschelon(1);
+            sub.setEchelon(1);
             sub.setCoRank(34);
-            transports.addSubforce(sub);
+            transports.addSubForce(sub);
         }
         transports.assignCommanders();
         transports.assignPositions();
@@ -1214,50 +1207,16 @@ public class ForceDescriptor {
         return transports;
     }
 
-    /*
-     * public void assignBloodnames() {
-     * assignBloodnames(getFactionRec());
-     * }
-     *
-     * public void assignBloodnames(FactionRecord fRec) {
-     * if (fRec != null && fRec.isClan()) {
-     * for (ForceDescriptor fd : subforces) {
-     * fd.assignBloodnames();
-     * }
-     * for (ForceDescriptor fd : attached) {
-     * fd.assignBloodnames();
-     * }
-     *
-     * if (co != null && (element || !(co.getAssignment() != null &&
-     * co.getAssignment().isElement()))) {
-     * co.assignBloodname();
-     * }
-     * if (xo != null && !(xo.getAssignment() != null &&
-     * xo.getAssignment().isElement())) {
-     * xo.assignBloodname();
-     * }
-     * }
-     * }
-     */
-
     public static int decodeWeightClass(String code) {
-        switch (code) {
-            case "UL":
-                return EntityWeightClass.WEIGHT_ULTRA_LIGHT;
-            case "L":
-                return EntityWeightClass.WEIGHT_LIGHT;
-            case "M":
-                return EntityWeightClass.WEIGHT_MEDIUM;
-            case "H":
-                return EntityWeightClass.WEIGHT_HEAVY;
-            case "A":
-                return EntityWeightClass.WEIGHT_ASSAULT;
-            case "SH":
-            case "C":
-                return EntityWeightClass.WEIGHT_COLOSSAL;
-            default:
-                return -1;
-        }
+        return switch (code) {
+            case "UL" -> EntityWeightClass.WEIGHT_ULTRA_LIGHT;
+            case "L" -> EntityWeightClass.WEIGHT_LIGHT;
+            case "M" -> EntityWeightClass.WEIGHT_MEDIUM;
+            case "H" -> EntityWeightClass.WEIGHT_HEAVY;
+            case "A" -> EntityWeightClass.WEIGHT_ASSAULT;
+            case "SH", "C" -> EntityWeightClass.WEIGHT_COLOSSAL;
+            default -> -1;
+        };
     }
 
     public String getWeightClassCode() {
@@ -1287,24 +1246,23 @@ public class ForceDescriptor {
 
     private boolean useWeightClass(Integer ut) {
         return ut != null &&
-                !(roles.contains(MissionRole.ARTILLERY) || roles.contains(MissionRole.MISSILE_ARTILLERY)) &&
-                (ut == UnitType.MEK ||
-                        ut == UnitType.AEROSPACEFIGHTER ||
-                        ut == UnitType.TANK ||
-                        ut == UnitType.BATTLE_ARMOR);
+              !(roles.contains(MissionRole.ARTILLERY) || roles.contains(MissionRole.MISSILE_ARTILLERY)) &&
+              (ut == UnitType.MEK ||
+                    ut == UnitType.AEROSPACE_FIGHTER ||
+                    ut == UnitType.TANK ||
+                    ut == UnitType.BATTLE_ARMOR);
     }
 
     /**
-     * Weight class can differ from the target once units are generated. Weight
-     * class is recalculated
-     * based on actual units present and eschelon name is set.
+     * Weight class can differ from the target once units are generated. Weight class is recalculated based on actual
+     * units present and echelon name is set.
      *
      * @return The weight class of this force node
      */
     public double recalcWeightClass() {
         double wc;
-        if (!subforces.isEmpty()) {
-            wc = subforces.stream().mapToDouble(ForceDescriptor::recalcWeightClass).sum() / subforces.size();
+        if (!subForces.isEmpty()) {
+            wc = subForces.stream().mapToDouble(ForceDescriptor::recalcWeightClass).sum() / subForces.size();
         } else if (null != weightClass && weightClass >= 0) {
             wc = weightClass;
         } else {
@@ -1328,7 +1286,7 @@ public class ForceDescriptor {
 
     public ArrayList<Object> getAllChildren() {
         ArrayList<Object> retVal = new ArrayList<>();
-        retVal.addAll(subforces);
+        retVal.addAll(subForces);
         retVal.addAll(attached);
         return retVal;
     }
@@ -1348,11 +1306,11 @@ public class ForceDescriptor {
     public String parseName() {
         String retVal = name;
         if (name == null) {
-            String eschName = Ruleset.findRuleset(this).getEschelonName(this);
-            if (eschName == null) {
+            String echelonName = Ruleset.findRuleset(this).getEschelonName(this);
+            if (echelonName == null) {
                 return "";
             }
-            retVal = "{ordinal} " + eschName;
+            retVal = "{ordinal} " + echelonName;
         }
         if (getParent() != null && getParent().getNameIndex() >= 0) {
             retVal = retVal.replace("{ordinal:parent}", ORDINALS[getParent().getNameIndex()]);
@@ -1364,11 +1322,11 @@ public class ForceDescriptor {
             retVal = retVal.replace("{alpha:parent}", Character.toString((char) (getParent().getNameIndex() + 'A')));
         }
         if (getParent() != null && retVal.contains("{name:parent}")) {
-            String parentName = getParent().getName().replaceAll(".*\\[", "").replaceAll("\\].*", "");
+            String parentName = getParent().getName().replaceAll(".*\\[", "").replaceAll("].*", "");
             retVal = retVal.replace("{name:parent}", parentName);
         }
         if (nameIndex < 0) {
-            retVal = retVal.replaceAll("\\{.*?\\}\\s?", "");
+            retVal = retVal.replaceAll("\\{.*?}\\s?", "");
         } else {
             retVal = retVal.replace("{ordinal}", ORDINALS[getNameIndex()]);
             retVal = retVal.replace("{greek}", GREEK[getNameIndex()]);
@@ -1379,14 +1337,16 @@ public class ForceDescriptor {
             retVal = retVal.replace("{alpha}", Character.toString((char) (getNameIndex() + 'A')));
             if (retVal.contains("{formation}")) {
                 if (null != formationType && null != formationType.getCategory()) {
-                    retVal = retVal.replace("{formation}", formationType.getCategory()
-                            .replace("Striker/Cavalry", "Striker").replaceAll(" Squadron", ""));
+                    retVal = retVal.replace("{formation}",
+                          formationType.getCategory()
+                                .replace("Striker/Cavalry", "Striker")
+                                .replaceAll(" Squadron", ""));
                 } else {
                     retVal = retVal.replace("{formation} ", "");
                 }
             }
         }
-        retVal = retVal.replaceAll("\\{.*?\\}", "");
+        retVal = retVal.replaceAll("\\{.*?}", "");
         retVal = retVal.replaceAll("[\\[\\]]", "").replaceAll("\\s+", " ");
         return retVal.trim();
     }
@@ -1420,11 +1380,11 @@ public class ForceDescriptor {
             retVal.append(" (C3I)");
         }
         Ruleset rules = Ruleset.findRuleset(this);
-        String eschName = null;
+        String echelonName = null;
 
-        while (eschName == null && rules != null) {
-            eschName = rules.getEschelonName(this);
-            if (eschName == null) {
+        while (echelonName == null && rules != null) {
+            echelonName = rules.getEschelonName(this);
+            if (echelonName == null) {
                 if (rules.getParent() == null) {
                     rules = null;
                 } else {
@@ -1433,8 +1393,8 @@ public class ForceDescriptor {
             }
         }
 
-        if (eschName != null) {
-            retVal.append(" ").append(eschName);
+        if (echelonName != null) {
+            retVal.append(" ").append(echelonName);
         }
         if (null != formationType) {
             retVal.append(" (").append(formationType.getName()).append(")");
@@ -1466,20 +1426,20 @@ public class ForceDescriptor {
         this.year = year;
     }
 
-    public Integer getEschelon() {
-        return eschelon;
+    public Integer getEchelon() {
+        return echelon;
     }
 
-    public String getEschelonCode() {
-        String retVal = eschelon.toString();
+    public String getEchelonCode() {
+        String retVal = echelon.toString();
         if (augmented) {
             retVal += "^";
         }
         return retVal;
     }
 
-    public void setEschelon(Integer eschelon) {
-        this.eschelon = eschelon;
+    public void setEchelon(Integer echelon) {
+        this.echelon = echelon;
     }
 
     public int getSizeMod() {
@@ -1534,22 +1494,17 @@ public class ForceDescriptor {
     }
 
     /**
-     * Translates between the rating codes used by the force generator and those
-     * used by the
-     * RAT Generator. The force generator uses abbreviations to make the formation
-     * rules more
-     * concise.
+     * Translates between the rating codes used by the force generator and those used by the RAT Generator. The force
+     * generator uses abbreviations to make the formation rules more concise.
      *
-     * @return The RATGenerator rating code corresponding to the same index as the
-     *         force generator
-     *         rating code.
+     * @return The RATGenerator rating code corresponding to the same index as the force generator rating code.
      */
     public String ratGeneratorRating() {
         FactionRecord fRec = getFactionRec();
-        if ((null != fRec)
-                && !fRec.getRatingLevels().contains(rating)
-                && (getRatingLevel() >= 0)
-                && !fRec.getRatingLevels().isEmpty()) {
+        if ((null != fRec) &&
+              !fRec.getRatingLevels().contains(rating) &&
+              (getRatingLevel() >= 0) &&
+              !fRec.getRatingLevels().isEmpty()) {
             return fRec.getRatingLevels().get(Math.min(getRatingLevel(), fRec.getRatingLevels().size() - 1));
         }
         return rating;
@@ -1653,13 +1608,9 @@ public class ForceDescriptor {
     }
 
     /**
-     * Because some eschelon names depend on knowing the actual weight class, we
-     * save a copy
-     * of the possibilities for this node and defer selection until after the final
-     * weight class
-     * determination.
+     * Because some echelon names depend on knowing the actual weight class, we save a copy of the possibilities for
+     * this node and defer selection until after the final weight class determination.
      *
-     * @param nameNodes
      */
     public void setNameNodes(List<ValueNode> nameNodes) {
         this.nameNodes = nameNodes;
@@ -1681,16 +1632,16 @@ public class ForceDescriptor {
         generateAttachments = attachments;
     }
 
-    public ArrayList<ForceDescriptor> getSubforces() {
-        return subforces;
+    public ArrayList<ForceDescriptor> getSubForces() {
+        return subForces;
     }
 
-    public void setSubforces(ArrayList<ForceDescriptor> subforces) {
-        this.subforces = subforces;
+    public void setSubForces(ArrayList<ForceDescriptor> subForces) {
+        this.subForces = subForces;
     }
 
-    public void addSubforce(ForceDescriptor fd) {
-        subforces.add(fd);
+    public void addSubForce(ForceDescriptor fd) {
+        subForces.add(fd);
         fd.setParent(this);
     }
 
@@ -1750,10 +1701,6 @@ public class ForceDescriptor {
         this.element = element;
     }
 
-    public int getPositionIndex() {
-        return positionIndex;
-    }
-
     public int getNameIndex() {
         return nameIndex;
     }
@@ -1776,8 +1723,8 @@ public class ForceDescriptor {
                 list.add(entity);
             }
         }
-        subforces.stream().forEach(sf -> sf.addAllEntities(list));
-        attached.stream().forEach(sf -> sf.addAllEntities(list));
+        subForces.forEach(sf -> sf.addAllEntities(list));
+        attached.forEach(sf -> sf.addAllEntities(list));
     }
 
     public ForceDescriptor createChild(int index) {
